--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -25,10 +25,11 @@
         <nav>
             <ul>
                 <ul>
-                    <li><a class= "nav-button" href="{% url 'login' %}">Login</a></li>
-                    <li><a class= "nav-button" href="{% url 'signup' %}">Registro</a></li>
-                    <li><a class= "nav-button" href="{% url 'profile' %}">perfil</a></li>
-
+                        <li><a class= "nav-button" href="{% url 'login' %}">Login</a></li>
+                        <li><a class= "nav-button" href="{% url 'register' %}">Registro</a></li>
+                        <li><a class= "nav-button" href="{% url 'profile' %}">Perfil</a></li>
+                        <li><a class= "nav-button" href="{% url 'edit_profile' %}">Editar Perfil</a></li>
+                        <li><a class= "nav-button" href="{% url 'delete_profile' %}">Eliminar Perfil</a></li>
                 </ul>
             </ul>
         </nav>
